--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@datorama/akita": "^8.0.1",
     "@react-three/drei": "^9.79.0",
     "@react-three/fiber": "^8.13.5",
     "camera-controls": "^2.7.0",
+    "rambdax": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1",
     "three": "^0.154.0",
     "xstate": "^4.38.1"
   },
