--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.79.0",
     "@react-three/fiber": "^8.13.5",
     "@react-three/postprocessing": "^2.15.0",
+    "@xstate/react": "^3.2.2",
     "camera-controls": "^2.7.0",
     "rambdax": "^10.0.0",
     "react": "^18.2.0",
